<resources>
    <string name="app_name">CS401 Project 3</string>

    <string name="main_title">Project Management Tool</string>
    <string name="main_button_text_signIn">Sign In</string>
    <string name="main_button_text_signUp">Sign Up</string>

    <string name="login_title">Sign In</string>
    <string name="login_input_hint_email">Email Address</string>
    <string name="login_input_hint_password">Password</string>
    <string name="login_button_text_signIn">Sign In</string>

    <string name="register_title">Sign Up</string>
    <string name="register_input_hint_firstName">First Name</string>
    <string name="register_input_hint_lastName">Last Name</string>
    <string name="register_input_hint_username">Username</string>
    <string name="register_input_hint_email">Email Address</string>
    <string name="register_input_hint_password">Password</string>
    <string name="register_input_hint_confirmPassword">Confirm Password</string>
    <string name="register_button_text_signUp">Sign Up</string>

    <string name="profile_title">Account</string>
    <string name="profile_section_profile">Profile</string>
    <string name="profile_input_hint_username">Username</string>
    <string name="profile_label_profile_picture">Profile Picture</string>
    <string name="profile_image_content_description_profile_picture">Profile Picture</string>
    <string name="profile_button_text_updateImage">Update Image</string>
    <string name="profile_input_hint_firstName">First Name</string>
    <string name="profile_input_hint_lastName">Last Name</string>
    <string name="profile_input_hint_email">Email Address</string>
    <string name="profile_input_hint_profilePicUri">Profile Photo Url</string>
    <string name="profile_button_text_saveProfile">Save Profile</string>
    <string name="profile_button_text_revertProfile">Clear Changes</string>
    <string name="profile_section_changePassword">Change Password</string>
    <string name="profile_input_hint_oldPassword">Current Password</string>
    <string name="profile_input_hint_newPassword">New Password</string>
    <string name="profile_input_hint_confirmPassword">Confirm Password</string>
    <string name="profile_button_text_updatePassword">Change Password</string>

    <string name="project_menu_fab_createProject_description">Add Project</string>
    <string name="project_menu_action_account">Account</string>
    <string name="project_menu_action_signOut">Sign Out</string>

    <string name="dialog_createProject_section_backgroundColor">Background Color</string>
    <string name="dialog_createProject_button_colorPicker">Edit Color</string>
    <string name="dialog_editProject_input_hint_projectName">Project Name</string>

    <string name="project_action_editProject">Edit Project</string>
    <string name="project_action_addPipeline">Add Pipeline</string>

    <string name="dialog_editTag_button_colorPicker">Tag Color</string>

    <string name="card_default_title">Card Title</string>
    <string name="user_profile_image_description">User profile image</string>
    <string name="card_default_date">04/26/22</string>
    <string name="edit_card_dialog_builder_neutralButton_text_preview">Preview</string>
    <string name="edit_card_dialog_builder_neutralButton_text_edit">Edit</string>
</resources>