<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_dark_background"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="240dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_default_title"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/tags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:minHeight="36dp"
            android:orientation="horizontal"
            android:padding="4dp">

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="36dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/assigned_user_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/user_profile_image_description"
                android:maxWidth="28dp"
                android:maxHeight="28dp"
                android:minWidth="28dp"
                android:minHeight="28dp" />

            <TextView
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/assigned_user_profile_image"
                android:text="@string/card_default_date"
                android:textColor="@color/cardview_light_background" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
