<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_editProject_input_hint_projectName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_editProject_input_projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dialog_editProject_section_backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_createProject_section_backgroundColor"
        android:textSize="@dimen/label_textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_editProject_button_colorPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_createProject_button_colorPicker" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:background="@drawable/preview_color"
            android:padding="2dp">

            <View
                android:id="@+id/dialog_editProject_preview_colorPicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/project_defaultColor" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tags"
            android:textSize="@dimen/label_textSize" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/dialog_editProject_button_addTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_editProject_recyclerView_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_tag_entry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_editProject_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete" />

</LinearLayout>